src/objects/Teller_User__c.object
<CustomObject>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Teller Users</relationshipLabel>
        <relationshipName>Teller_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Teller_Group__c</fullName>
        <label>Teller Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Teller_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Teller User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Branch__c</columns>
        <columns>Teller_Group__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Teller User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teller Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>